--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>yuanyuanreader</title>
+    <title>淵淵閱讀</title>
+
+    <!-- SEO -->
+    <meta name="description" content="這是一款無廣告、支援本地導入的小說閱讀器，讓你自由編輯、標註並分享喜愛的小說，完全免費、無需登入！">
+    <meta name="keywords" content="小說閱讀器,本地小說導入,離線閱讀,無廣告閱讀器,文字編輯,小說分享,小說APP,TXT閱讀器">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://smr24425.github.io/yuanyuanReader" />
+    <meta property="og:title" content="無廣告小說閱讀器｜離線導入、自訂編輯、自由分享" />
+    <meta property="og:description" content="支援本地小說導入與離線閱讀，無廣告干擾，還能編輯與分享你喜愛的內容！一款專為小說愛好者打造的閱讀工具。" />
+    <meta property="og:url" content="https://smr24425.github.io/yuanyuanReader" />
   </head>
   <body>
     <div id="root"></div>
